changed link to pdf resume

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <p> I am <b>Danny Gonzalez</b>, a software and data analyst developer living in Toronto. </p>
 						<p> I became passionate about building applications since I built my first C++ application in 2005. Then I became a data analytic consultant and developer. Finally, my interest in web development started back in 2017 when I decided to expand my knowledge at Humber college and solve real world problems by applying new and exciting technologies.</p>
 						<p>	I’ve had the privilege of working at a business intelligence company in Colombia. My main focus those days were building Excel - VBA - Power BI advanced reports & automatized tasks, writing SQL commands, creating Data Warehouses, and ASP.Net Web Applications for a variety of clients and internal projects.</p>
-                        <a href="#" class="sim-btn btn-hover-new" data-text="Download Resume"><span>Download Resume</span></a>
+                        <a href="Danny Gonzalez Resume.pdf" class="sim-btn btn-hover-new" data-text="Download Resume"><span>Download Resume</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
