--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background-image: url('uploads\banner1.jpg');">
+	<section id="home" class="main-banner parallaxie" style="background-image: url('uploads//banner1.jpg');">
 		<div class="heading">
 			<h1>Danny Gonzalez</h1>
 			<h3 class="cd-headline clip is-full-width">
