--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				</div>
 			</div>
 			
-			<div class="gallery-list row align-middle">
+			<div class="gallery-list row align-middle mr-4">
 
 				<div class="col-md-3 col-sm-3 gallery-grid gal_a gal_b gal_e m-4">
 					<div class="card porfolio-images-custom">
