Updates resume and index

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 					<b>Data Analytic</b>
 					<b>Business Intelligence</b>
 					<b>T-SQL</b>
+					<b>SQL Developer</b>
 					<b>VBA</b>
 					<b>.NET</b>
 				</span>
