--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				</span>
 			</h3>
 			<div class="btn-group" role="group">
-				<a href="https://datagv.github.io/Portfolio/" class="btn btn-outline-dark header-social"><i class="fa-brands fa-github"></i></a>
+				<a href="https://github.com/DaTaGV/" class="btn btn-outline-dark header-social"><i class="fa-brands fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/danny-gonzalez-182139134/" class="btn btn-outline-dark header-social">
 					<i class="fa-brands fa-linkedin"></i>
 				</a>
